--- a/templates/testimonials.twig
+++ b/templates/testimonials.twig
@@ -1,7 +1,34 @@
 {# testimonials #}
 {% extends "@ponzoblocks/blockwrap.twig" %}
+{% import '@ponzoblocks/elements/visual.twig' as visual %}
+
 {% block blockcontent %}
-    {% for card in block.testimonials %}
-            {% include '@ponzoblocks/elements/card.twig'  %}
+    {% for testimonial in block.testimonials %}
+    {% set card = function('pb_postobject',testimonial) %}
+    <div class="c{{blocktheme.columnwidth}} pb-contentcolumn">
+        <div class="grid g2">
+            <div class="pb__left">
+                <div class="box">
+                    <div>
+                    <div class="fo--person">
+                            {{ visual.url(
+                                card.thumbnail, 
+                                '1x1','full','center','cover')
+                            }}
+                            <p class="fs__a xs">{{card.meta.person}}</p>
+                        </div>
+                        <h5 class="fs__q xl">{{card.post_excerpt}}</h5>
+                    </div>
+                    <a href="{{card.meta.website}}" target="_blank"><h4 class="fs__t xs">{{card.post_title}}</h4></a>
+                </div>
+            </div>
+            <div class="pb__right">
+                <div class="box">
+                    <h5 class="fs__m">{{ _e('referenties') }}</h5>
+                    <p class="fs__r">{{card.post_content}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
     {% endfor %}
 {% endblock %}
